monticore-generator/src/test/resources/cocos/invalid/A4024/A4024_e.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4024;

grammar A4024_e {

  A;

  Super = ["c"];

  Sub extends Super = c:A;
}
